<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="ten_percent">10%</string>        
    <string name="fifteen_percent">15%</string>    
    <string name="twenty_percent">20%</string>    
    <string name="tip_is">Tip is:</string>    
    <string name="tip_zero">$0.00</string>    
    

</resources>
